# AiEvaluationTool

./: .env.example  .gitignore  CLAUDE.md  README.md  cli.py  main.py  models.py  pyproject.toml  pyrightconfig.json
.claude/: settings.json
config/: exp1_baseline.yaml  exp1_baseline_small.yaml  exp1_baseline_tiny.yaml  exp2_cold_start.yaml  exp3_context.yaml  exp3_context_full.yaml  exp4_concurrency.yaml  exp4_concurrency_small.yaml  exp4_concurrency_tiny.yaml  exp5_soak.yaml  exp5_soak_small.yaml  exp5_soak_tiny.yaml  exp6_workload.yaml  exp6_workload_chat.yaml  exp6_workload_completion.yaml  exp6_workload_unified.yaml
experiments/: base.py  exp1_baseline.py  exp2_cold_start.py  exp3_context.py  exp4_concurrency.py  exp5_soak.py  exp6_workload.py
harness/: client.py  local_runner.py  metadata.py  metrics.py  runner.py
local/: README.md  start_ollama.sh
management/: ec2_manager.py  s3.py  ssh.py  ssm.py
prompts/: long_16k.txt  long_32k.txt  medium_4k.txt  short_1k.txt  small_1k.txt  tiny_150.txt  xlarge_128k.txt  xlarge_32k.txt
tests/: test_cli.py
tests/experiments/: test_base.py  test_exp1_baseline.py  test_exp2_cold_start.py  test_exp3_context.py  test_exp4_concurrency.py  test_exp5_soak.py  test_exp6_workload.py
tests/harness/: test_client.py  test_local_runner.py  test_metadata.py  test_metrics.py  test_runner.py
tests/management/: test_ec2_manager.py  test_s3.py  test_ssh.py  test_ssm.py
