[project]
name = "aievaluationtools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.6",
    "click>=8.3.3",
    "httpx>=0.28.1",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "boto3-stubs[ec2,s3,ssm]>=1.43.7",
    "moto[ec2,pricing,s3]>=5.2.1",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
    "ruff>=0.15.12",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "ANN",  # flake8-annotations
    "RUF",  # ruff-specific rules
    "PT",   # flake8-pytest-style
    "ERA",  # eradicate (commented-out code)
    "PL",   # pylint
    "TRY",  # tryceratops
    "PERF", # perflint
]
ignore = [
    "TRY003",  # long messages in exception classes
    "PLR0913", # too many arguments
    "ANN401",  # Any required for untyped boto3 response fields
    "PT013",   # allow `from pytest import X` for pyright compatibility
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
